# gdrust-billboard-3danim

./: Cargo.toml  README.md
gdrust-bilboard-3danim-core/: Cargo.toml
gdrust-bilboard-3danim-core/src/: animators.rs  prelude.rs  traits.rs
gdrust-bilboard-3danim-core/src/animators/: bilboard_animator.rs
gdrust-bilboard-3danim-core/src/core/: calc_angle.rs
gdrust-bilboard-3danim-core/src/enums/: direction.rs
gdrust-bilboard-3danim-core/src/traits/: animator.rs  bilboard_animation.rs
gdrust-bilboard-3danim-derive/: Cargo.toml
gdrust-bilboard-3danim-derive/src/: attribute.rs  derive.rs  lib.rs
gdrust-bilboard-3danim-derive/src/attribute/: godot_animation_enum.rs  godot_animator_class.rs
gdrust-bilboard-3danim-derive/src/derive/: bilboard_animation.rs
gdrust-billboard-3danim-core/: Cargo.toml
gdrust-billboard-3danim-core/src/: animators.rs  constants.rs  core.rs  lib.rs  traits.rs
gdrust-billboard-3danim-core/src/animators/: billboard_animator.rs
gdrust-billboard-3danim-core/src/constants/: defaults.rs
gdrust-billboard-3danim-core/src/traits/: animator.rs  billboard_animation.rs
gdrust-billboard-3danim-derive/: Cargo.toml
gdrust-billboard-3danim-derive/src/: derive.rs  lib.rs
gdrust-billboard-3danim-derive/src/attribute/: godot_animation_enum.rs  godot_animator_class.rs
gdrust-billboard-3danim-derive/src/derive/: billboard_animation.rs
src/: lib.rs  prelude.rs  tests.rs
