[package]
name = "gdrust-bilboard-3danim"
version = "0.1.0"
edition = "2024"

[dependencies]
gdrust-bilboard-3danim-core = { path = "./gdrust-bilboard-3danim-core" }
gdrust-bilboard-3danim-derive = { path = "./gdrust-bilboard-3danim-derive" }
godot = { version = "0.3.2", features = ["experimental-godot-api"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = "s"

[features]
macros = []
