[package]
name = "gdrust-billboard-3danim-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[dependencies]
# Core lib
gdrust-billboard-3danim-core = { path = "../gdrust-billboard-3danim-core" }
syn = { version = "2.0.100", features = ["full", "parsing"] }
proc-macro2 = "1.0.94"
quote = "1.0.40"
